# afclib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  entitlements.plist  program
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.c
examples/include/: collections.h  string_handling.h
include/: af_array.h  af_collections.h  af_def.h  af_list.h  af_map.h  af_queue.h  af_stack.h  af_string.h  af_string_tests.h  str_lib.h  str_tests.h  string_lib.h  string_wrappers.h
src/: af_array.c  af_list.c  af_map.c  af_queue.c  af_stack.c  af_string.c  af_string_tests.c  main.c  str_lib.c  str_tests.c  string_lib.c  string_tests.c  string_wrappers.c
tests/: af_array_tests.c  af_list_tests.c  af_map_tests.c  af_queue_tests.c  af_stack_tests.c  af_string_tests.c
